moving 'root' project to projects/demo.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,11 @@
       "dom"
     ],
     "paths": {
-      "rsb-mention": [
-        "dist/rsb-mention"
+      "lib": [
+        "dist/lib"
       ],
-      "rsb-mention/*": [
-        "dist/rsb-mention/*"
+      "lib/*": [
+        "dist/lib/*"
       ]
     }
   }
